# artisan-chat-app

./: README.md
chat-app-backend/: docker-compose.yaml  pyproject.toml
chat-app-backend/.docker/: Dockerfile
chat-app-backend/alembic/: env.py
chat-app-backend/alembic/versions/: baa9097006be_new_migration.py
chat-app-backend/app/: backend_pre_start.py  main.py
chat-app-backend/app/chat/: __init__.py  constants.py  models.py  schema.py  service.py  views.py
chat-app-backend/app/core/: auth.py
chat-app-backend/app/core/db/: mock_session.py  session.py
chat-app-backend/app/tests/: test_chat.py
chat-app-frontend/: package-lock.json  package.json
chat-app-frontend/src/: App.tsx  constants.tsx
chat-app-frontend/src/components/: Avatar.tsx  Button.tsx  ChatBox.tsx  Message.tsx
chat-app-frontend/src/hooks/: useLocalStorage.tsx
